--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Leo's Introduction</title>
+		<title>Project Introduction</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -38,18 +38,19 @@
 									<header>
 										<h2>Hey! My Name is <strong>Leo He</strong></h2>
 									</header>
-									<h3>Education</h3>
-									<p>My name is Leo He. I am currently a freshman at the University of Maryland and double majoring
-									in Computer Science and Economics. I recently graduated from the Science, Mathematics and Computer
-									Science Magnet program at Montgomery Blair High School where I learned to code in Java and Matlab.
-									I also learned to use the Design Softward Labview. I had previously worked in python and html am
-									capable of doing basic tasks using either. </p>
+									<h3>Topic</h3>
+									<p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum
+										 ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N.
+										 del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de
+										  tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien
+										ingresó como texto de rell</p>
 
-									<h3>Hopes for the Future</h3>
-									<p>Currently, I am actually not certain of what I want to do in the future! I know that I enjoy and
-									am interested in coding but I wish to explore before I make a final decision. I just want a job
-									with effects that I can see! I am interested in any oppurtunity to grow and hope to slowly form a path for
-									myself</p>
+									<h3>Purpose</h3>
+									<p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto d
+										e un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más
+										o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido
+										aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores
+										de páginas web usan el Lorem Ipsum como su t</p>
 
 									<h3>
 
@@ -70,7 +71,7 @@
 						<div class="row">
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Basic contact Information: If you wish to contact me for any reason</p>
+									<p>Basic contact Information:</p>
 								</section>
 							</div>
 							<div class="col-6 col-12-medium">
