--- a/Projects.html
+++ b/Projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Leo's Projects</title>
+		<title>Project</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +14,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 style="color:red;">Leo's Projects</h1>
+							<h1 style="color:red;">Project</h1>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -31,7 +31,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>PREVIOUS WORK EXPERIENCES</h2>
+							<h2>Design</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -39,11 +39,9 @@
 								<!-- Feature -->
 									<section>
 										<header>
-											<h3>Sibley Memorial Hospital</h3>
+											<h3>Data Collection</h3>
 										</header>
-										<p>I volunteered at Sibley Memorial Hospital for the summer of 2018 and 2019. I volunteered in multiple
-										places including the Surgery department and the front desk but actually spent the majority of the time
-										in the Emergency Room where I communicated with patients, prepared beds, and helped stock rooms.</p>
+										<p>Hay muchas variaciones de los pasajes de Lorem Ipsum disponibles, pero la mayoría sufrió alteraciones en alguna manera, ya sea porque se le agregó humor, o palabras aleatorias que no parecen ni un poco creíbles. Si vas a utilizar un pasaje de Lorem Ipsum, necesitás estar seguro de que no hay nada avergonzante escondido en el medio del texto. Todos los generadores de Lorem Ipsum que se encuentran en Internet tienden a repetir trozos predefinidos cuando sea necesario, haciendo a este el único generador verdadero (v</p>
 									</section>
 
 							</div>
@@ -52,12 +50,9 @@
 								<!-- Feature -->
 									<section>
 										<header>
-											<h3>NIST MML Department</h3>
+											<h3>Variables Used</h3>
 										</header>
-										<p>I worked as a High School Intern at Nist in the SHIP program. I worked under Dr. Feng Yi of the Materials
-										Measurements Science Division of the Material Measurements Lab and helped to program the vacuums for the
-										picocalorimeter using a programming language named labview. I also worked on a project related to calculating
-										released heat from bacteria using a nanocalorimeter.</p>
+										<p>de omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum</p>
 									</section>
 
 							</div>
@@ -66,12 +61,9 @@
 								<!-- Feature -->
 									<section>
 										<header>
-											<h3>Cabin John Middle School</h3>
+											<h3>Something</h3>
 										</header>
-										<p>I worked as a coach for a math team at Cabin John Middle School. We would meet every Saturday and
-										I would try to teach them various forms of mathematics and prepare them for a middle school math competition
-										called Mathcounts. The team managed to land 7th place in our county and 9th place in state, pretty good considering
-										it was the first year they participated</p>
+										<p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that ar</p>
 									</section>
 
 							</div>
@@ -89,7 +81,7 @@
 					<div class="row">
 						<div class="col-6 col-12-medium">
 							<section>
-								<p>Basic Contact Information: If you wish to contact me for any reason</p>
+								<p>Basic Contact Information:</p>
 							</section>
 						</div>
 						<div class="col-6 col-12-medium">
