--- a/Projects.html
+++ b/Projects.html
@@ -21,6 +21,7 @@
 								<ul>
 									<li><a class="icon solid fa-feather-alt" href="index.html"><span>Introduction</span></a></li>
 									<li><a class="icon solid fa-briefcase" href="Projects.html"><span>Projects</span></a></li>
+									<li><a class="icon solid fa-briefcase" href="Final_Tutorial.html"><span>Code</span></a></li>
 								</ul>
 							</nav>
 
