--- a/Projects.html
+++ b/Projects.html
@@ -20,7 +20,7 @@
 							<nav id="nav">
 								<ul>
 									<li><a class="icon solid fa-feather-alt" href="index.html"><span>Introduction</span></a></li>
-									<li><a class="icon solid fa-briefcase" href="Final_Tutorial (3).html"><span>Code</span></a></li>
+									<li><a class="icon solid fa-briefcase" href="422Final.html"><span>Code</span></a></li>
 									<li><a class="icon solid fa-briefcase" href="Projects.html"><span>Conclusion</span></a></li>
 								</ul>
 							</nav>
